--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "daisyui": "^2.52.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
     "firebase": "^9.19.1",
